# Trading-bot-CC

./: .dockerignore  .env 2.example  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  LICENSE  LICENSE 2  Makefile  README.md  ROADMAP.md  SECURITY.md  TODO.md  _cc_instant.py  _cc_lite.py  _launch.sh  _launch_dashboard.sh  _run_dashboard.sh  _serve.sh  _smoke.sh  _smoke_strat.py  _sprint10_patch.py  _sprint11_patch.py  _sprint12_patch.py  _sprint4_patch.py  _sprint5_patch.py  _sprint6_patch.py  _sprint7_patch.py  _sprint7_read11.txt  _sprint7_read12.txt  _sprint7_read4.txt  _sprint7_read6.txt  _sprint7_read7.txt  _sprint7_read7b.txt  _sprint8_patch.py  _sprint9_patch.py  _start 2.sh  _start.sh  _start_dashboard 2.sh  (+174 more)
.github/: copilot-instructions 2.md  copilot-instructions.md  pull_request_template.md
.omg/: fix_all.txt  pm_arena_fix.patch  prd.json  scanner_test_out.txt  test_paper_trader.py  trade_intel.html  trade_intel_py.py  trade_intel_py2.py
.trunk/: actions  notifications 2  tools 2  trunk.yaml
backup_untracked/: .roomodes 2
config/: default.yaml
data/: brief-2026-05-08.json  brief-2026-05-25.json  closed_trades 2.jsonl  decision_tracker.db  generate_brief.py  market_overview_last_good.json
docker/: Dockerfile 2.engine  Dockerfile 2.ingestor  Dockerfile.api  Dockerfile.discord  Dockerfile.jupyter  Dockerfile.scheduler  Dockerfile.telegram
docs/: API_MARKET_INTEL.md  ARCHITECTURE.md  BACKTESTING.md  BOT_GUIDE.md  CC_DASHBOARD_10_10_GAP_LIST.md  CC_UPGRADE_BLUEPRINT_v1.md  CC_VNEXT_SPRINT_PLAN.md  CLAUDE_CODE_ENGINEERING_PROMPT_ZH.md  CLEANUP_CHECKLIST 2.md  COPILOT_ENGINEERING_PROMPT_ZH.md  DAILY_REPORT.md  DECISION_SYSTEM_DEVELOPER_PROMPT_ZH.md  DISCORD_ALERTS 2.md  FUND_CONSOLE_DEVELOPER_PROMPT_ZH.md  FUND_MANAGER_CONSOLE_SPEC.md  INSTITUTIONAL_PLATFORM_ENGINEERING_PROMPT_ZH.md  INSTITUTIONAL_PLATFORM_MASTER_PROMPT_ZH.md  METHODOLOGY.md  PLAYBOOK_10_10_SPEC.md  PLAYBOOK_PM_REVIEW_GAP_LIST.md  PM_PRODUCT_ROADMAP.md  PM_PRODUCT_ROADMAP_10_10.md  PORTFOLIO_ANALYSIS_DEVELOPER_PROMPT_ZH.md  SCHEMA.md  SETUP_GUIDE.md  SIGNALS.md  SINGLE_STOCK_360_BUILD_PROMPT_ZH.md  SINGLE_STOCK_COMMAND_CENTER.md  SKILL.md  SMART_MONEY_INTELLIGENCE.md  STRATEGIES.md  confidence_model 2.md  discord_alert_examples 2.md  index.html  sector_logic 2.md
patches/: 0001-chore-recreate-engines-self_learning-and-add-lightwe 2.patch  (+1 more)
scripts/: _check.py  (+9 more)
(+565 files in other folders)
