[tool.poetry]
name = "tradingai-bot"
version = "6.0.0"
description = "CC — Regime-Aware Market Intelligence Platform"
authors = ["CC Contributors"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core (from base.txt)
asyncpg = "0.29.0"
psycopg2-binary = "2.9.9"
alembic = "1.13.1"
httpx = "0.26.0"
aiohttp = "3.9.1"
requests = "2.31.0"
pandas = "2.1.4"
numpy = "1.26.2"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
structlog = "23.3.0"
python-json-logger = "2.0.7"
prometheus-client = "0.19.0"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
tenacity = "8.2.3"
azure-identity = "1.15.0"

# SQLAlchemy with extras
sqlalchemy = {version = "2.0.23", extras = ["asyncio"]}
redis = {extras = ["asyncio"], version = "5.0.1"}

# Engine (from engine.txt)
pandas-ta = "0.3.14b0"
talib-binary = "0.4.24"
scipy = "1.11.4"
statsmodels = "0.14.1"
scikit-learn = "1.3.2"
openai = "1.6.1"
tiktoken = "0.5.2"
joblib = "1.3.2"

# API (from api.txt)
fastapi = "0.108.0"
python-multipart = "0.0.6"
slowapi = "0.1.9"
uvicorn = {version = "0.25.0", extras = ["standard"]}
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}

# Ingestors (from ingestor.txt)
yfinance = "0.2.35"
polygon-api-client = "1.13.4"
alpaca-py = "0.17.2"
newsapi-python = "0.2.7"
websockets = "12.0"
python-binance = "1.0.19"

# Notifications (from notifications.txt)
discord-py = "2.3.2"
# python-telegram-bot — REMOVED: Discord is the primary interface.
# Telegram support is deprecated. See ROADMAP.md.
# twilio — optional, uncomment if SMS alerts are needed
# twilio = "8.10.3"

# Scheduler (from scheduler.txt)
apscheduler = "3.10.4"
jinja2 = "3.1.2"
markdown = "3.5.1"

# Backtest (from backtest.txt)
vectorbt = "0.26.1"
backtrader = "1.9.78.123"
matplotlib = "3.8.2"
plotly = "5.18.0"
seaborn = "0.13.1"
quantstats = "0.0.62"
empyrical = "0.5.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.5"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
